--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "mcp-handler": "^1.0.0",
-    "@modelcontextprotocol/sdk": "^1.25.2",
-    "zod": "^3.23.8"
+    "next": "16.1.5",
+    "react": "19.0.0-rc-66855b96-20250127",
+    "react-dom": "19.0.0-rc-66855b96-20250127",
+    "mcp-handler": "1.0.7",
+    "@modelcontextprotocol/sdk": "1.25.2",
+    "zod": "3.25.76"
   },
   "devDependencies": {
     "typescript": "^5.6.3",
