--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "next": "16.1.5",
-    "react": "19.0.0-rc-66855b96-20250127",
-    "react-dom": "19.0.0-rc-66855b96-20250127",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
     "mcp-handler": "1.0.7",
     "@modelcontextprotocol/sdk": "1.25.2",
     "zod": "3.25.76"
@@ -19,7 +19,6 @@
   "devDependencies": {
     "typescript": "^5.6.3",
     "@types/node": "^20.11.30",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0"
+    "@types/react": "^19.2.4"
   }
 }
