--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,79 +8,5 @@
     "type": "git",
     "url": "https://github.com/yourusername/mcp-weather-vercel"
   },
-  "license": "MIT",
-  "csp": "default-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'",
-  "widget_domain": "weather-widget.vercel.app",
-  "widgets": [
-    {
-      "name": "weather-widget",
-      "title": "天気ウィジェット",
-      "description": "ChatGPT内で天気予報を表示するウィジェット",
-      "enabled_by_default": true,
-      "capabilities": [
-        "interactive",
-        "responsive",
-        "dark_mode"
-      ]
-    }
-  ],
-  "tools": [
-    {
-      "name": "geocode_place",
-      "description": "場所名から候補地（緯度経度）を複数返す",
-      "parameters": {
-        "type": "object",
-        "properties": {
-          "place": {
-            "type": "string",
-            "description": "場所名（例: 中央区、Shibuya、Tokyo）"
-          },
-          "count": {
-            "type": "integer",
-            "description": "返す候補地の数（1-10）",
-            "default": 5
-          },
-          "days": {
-            "type": "integer",
-            "description": "予報日数（1-7）",
-            "default": 7
-          }
-        },
-        "required": ["place"]
-      }
-    },
-    {
-      "name": "get_forecast",
-      "description": "座標から天気予報データを取得（ウィジェットから呼び出し）",
-      "parameters": {
-        "type": "object",
-        "properties": {
-          "latitude": {
-            "type": "number",
-            "description": "緯度"
-          },
-          "longitude": {
-            "type": "number",
-            "description": "経度"
-          },
-          "days": {
-            "type": "integer",
-            "description": "予報日数（1-7）",
-            "default": 7
-          },
-          "timezone": {
-            "type": "string",
-            "description": "タイムゾーン（例: Asia/Tokyo）",
-            "default": "Asia/Tokyo"
-          },
-          "label": {
-            "type": "string",
-            "description": "表示用ラベル（任意）"
-          }
-        },
-        "required": ["latitude", "longitude"]
-      },
-      "widget_only": true
-    }
-  ]
+  "license": "MIT"
 }
