--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,10 +3,22 @@
   "description": "Open-Meteo天気予報API統合のMCPウィジェット",
   "version": "0.2.0",
   "author": "Developer",
-  "homepage": "https://github.com/yourusername/mcp-weather-vercel",
+  "homepage": "https://github.com/hajimeno-ipoo/mcp-weather-vercel",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/mcp-weather-vercel"
+    "url": "https://github.com/hajimeno-ipoo/mcp-weather-vercel"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "widgets": {
+    "weather-widget": {
+      "uri": "ui://widget/weather.html",
+      "csp": "default-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'; connect-src https://geocoding-api.open-meteo.com https://api.open-meteo.com",
+      "widget_domain": "weather-widget",
+      "capabilities": {
+        "interactive": true,
+        "responsive": true,
+        "dark_mode": true
+      }
+    }
+  }
 }
