fix: manifest二重管理のブレ解消とget_forecast入力のdays削除

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "node scripts/test-manifest.mjs",
+    "lint": "tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
     "next": "16.1.5",
