--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,8 +11,8 @@
   "license": "MIT",
   "widgets": {
     "weather-widget": {
-      "uri": "ui://widget/weather.html",
-      "csp": "default-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'; connect-src https://geocoding-api.open-meteo.com https://api.open-meteo.com",
+      "uri": "ui://widget/weather-v23.html",
+      "csp": "default-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'; connect-src https://geocoding-api.open-meteo.com https://api.open-meteo.com; frame-src https://www.openstreetmap.org",
       "widget_domain": "weather-widget",
       "capabilities": {
         "interactive": true,
